# Health-Heart

./: CMakeLists.txt  LICENSE  health-heart.c  model.h  readme.md  tinyml.cpp
Treinamento-Heart-Risk/: framingham - pre processado.csv  treinamento.py
